# lorakit

./: .gitignore  README.md  pyproject.toml
config/examples/: batch_sample_prompts.yaml  profile_4bit.yaml  profile_bf16.yaml  train_lora_sdxl_24gb_4090_1.0.yaml  train_lora_sdxl_24gb_4090_4bit_1.0.yaml  train_lora_sdxl_24gb_4090_bf16_metal_1.0.yaml  train_lora_sdxl_8gb_1.0.yaml
src/lorakit/: callbacks.py  config.py  datasets.py  jobs.py  optimizers.py  profiling.py  prompts.py  sample.py  train.py  utils.py
src/lorakit/cli/: lorakit.py
tests/: test_datasets.py  test_train.py
